pufferlib/ocean/gpudrive/gpudrive.h

#define LOG_BUFFER_SIZE 1024
typedef struct Log Log;
struct Log {
    float episode_return;
    float episode_length;
};
typedef struct LogBuffer LogBuffer;
struct LogBuffer {
    Log* logs;
    int length;
    int idx;
};
LogBuffer* allocate_logbuffer(int size) {
    LogBuffer* logs = (LogBuffer*)calloc(1, sizeof(LogBuffer));
    logs->logs = (Log*)calloc(size, sizeof(Log));
    logs->length = size;
    logs->idx = 0;
    return logs;
}
void free_logbuffer(LogBuffer* buffer) {
    free(buffer->logs);
    free(buffer);
}
Log aggregate_and_clear(LogBuffer* logs) {
    Log log = {0};
    if (logs->idx == 0) {
        return log;
    }
    for (int i = 0; i < logs->idx; i++) {
        log.episode_return += logs->logs[i].episode_return;
        log.episode_length += logs->logs[i].episode_length;
 
    }
    log.episode_return /= logs->idx;
    log.episode_length /= logs->idx;
    logs->idx = 0;
    return log;
}
typedef struct Entity Entity;
struct Entity {
    int type;
    int road_object_id;
    int road_point_id;
    int array_size;
    float* traj_x;
    float* traj_y;
    float* traj_z;
    float* traj_vx;
    float* traj_vy;
    float* traj_vz;
    float* traj_heading;
    int* traj_valid;
    float width;
    float length;
    float height;
    float goal_position_x;
    float goal_position_y;
    float goal_position_z;
    int collision_state;
    float x;
    float y;
    float z;
    float vx;
    float vy;
    float vz;
    float heading;
    int valid;
};
typedef struct GPUDrive GPUDrive;
struct GPUDrive {
    float* observations;
    int* actions;
    float* rewards;
    unsigned char* dones;
    LogBuffer* log_buffer;
    Log* logs;
    int num_agents;
    int active_agent_count;
    int* active_agent_indices;
    int human_agent_idx;
    Entity* entities;
    int num_entities;
    int timestep;
    int dynamics_model;
    float* fake_data;
};
void init(GPUDrive* env){
    env->human_agent_idx = 0;
    env->timestep = 0;
    env->entities = load_map_binary("map.bin", env);
    env->dynamics_model = CLASSIC;
    set_active_agents(env);
    set_start_position(env);
    env->logs = (Log*)calloc(env->active_agent_count, sizeof(Log));
    printf("num_entities: %d\n", env->num_entities);
    printf("Offset of x: %zu\n", offsetof(struct Entity, x));
    printf("Offset of y: %zu\n", offsetof(struct Entity, y));
    env->fake_data = (float*)calloc(10000, sizeof(float));
}
void free_allocated(GPUDrive* env){
    free(env->observations);
    free(env->actions);
    free(env->rewards);
    free(env->dones);
    free_logbuffer(env->log_buffer);
    free_initialized(env);
}
void c_reset(GPUDrive* env){
    env->timestep = 0;
    set_start_position(env);
    for(int x = 0;x<env->active_agent_count; x++){
        env->logs[x] = (Log){0};
    }
}
int c_step(GPUDrive* env){
    memset(env->rewards, 0, env->active_agent_count * sizeof(float));
    env->timestep++;    
    // Process actions for all active agents
    if(env->timestep == 91){
        c_reset(env);
    }
    for(int i = 0; i < env->active_agent_count; i++){
        env->logs[i].episode_length += 1;
        int agent_idx = env->active_agent_indices[i];
        // move_dynamics(env, i, agent_idx);
        // move_random(env, agent_idx);
        move_expert(env, env->actions, agent_idx);
    }
        
    compute_observations(env);
    return 0;
}
   

typedef struct Client Client;
struct Client {
    float width;
    float height;
    Texture2D puffers;
    Vector3 camera_target;
    float camera_zoom;
    Camera3D camera;
};
Client* make_client(GPUDrive* env){
    Client* client = (Client*)calloc(1, sizeof(Client));
    client->width = 1280;
    client->height = 704;
    InitWindow(client->width, client->height, "PufferLib Ray GPU Drive");
    SetTargetFPS(30);
    client->puffers = LoadTexture("resources/puffers_128.png");
    
    // Get initial target position from first active agent
    Vector3 target_pos = {
        env->entities[env->active_agent_indices[0]].x,
        env->entities[env->active_agent_indices[0]].y,  // Y is up
        env->entities[env->active_agent_indices[0]].z   // Z is depth
    };
    
    // Set up camera to look at target from above and behind
    client->camera.position = (Vector3){ 
        target_pos.x,           // Same X as target
        target_pos.y + 80.0f,   // 20 units above target
        target_pos.z + 50.0f    // 20 units behind target
    };
    client->camera.target = target_pos;
    client->camera.up = (Vector3){ 0.0f, -1.0f, 0.0f };  // Y is up
    client->camera.fovy = 45.0f;
    client->camera.projection = CAMERA_PERSPECTIVE;
    
    client->camera_zoom = 3.5f;
    return client;
}
void c_render(Client* client, GPUDrive* env) {
    BeginDrawing();
    ClearBackground(RAYWHITE);
    
    BeginMode3D(client->camera);
    // Draw a grid to help with orientation
    DrawGrid(20, 1.0f);
    
    for(int i = 0; i < env->num_entities; i++) {
        if(env->entities[i].type == 1 ) {
            for(int j = 0; j < env->active_agent_count; j++) {
                Vector3 position;
                float heading;
                if(env->active_agent_indices[j] != i ) {
                    // position = (Vector3){
                    //     env->entities[i].traj_x[env->timestep],
                    //     env->entities[i].traj_y[env->timestep],
                    //     env->entities[i].traj_z[env->timestep]
                    // };
                    // heading = env->entities[i].traj_heading[env->timestep];
                    continue;
                } else {
                    position = (Vector3){
                        env->entities[i].x,
                        env->entities[i].y,
                        env->entities[i].traj_z[env->timestep]
                    };
                    heading = env->entities[i].heading;
                } 
                
                // Create size vector
                Vector3 size = {
                    env->entities[i].length,
                    env->entities[i].width,
                    env->entities[i].height
                };
                
                // Save current transform
                rlPushMatrix();
                
                // Translate to position, rotate around Y axis, then draw
                rlTranslatef(position.x, position.y, position.z);
                rlRotatef(heading * RAD2DEG, 0.0f, 0.0f, 1.0f);  // Convert radians to degrees
                
                // Draw cube centered at origin (will be transformed by matrix)
                Color object_color = PINK;
                if(env->entities[i].type == 1 && env->entities[i].valid == 1){
                    object_color = DARKBLUE;
                }
                else if(env->entities[i].type == 2 && env->entities[i].valid == 1){
                    object_color = BEIGE;
                }
                else if(env->entities[i].type == 3 && env->entities[i].valid == 1){
                    object_color = YELLOW;
                }
                else if(env->entities[i].valid == 0 ){
                    object_color = RED;
                }
                
                // draw the id number above the object
                DrawCube((Vector3){0, 0, 0}, size.x, size.y, size.z, object_color);
                DrawCubeWires((Vector3){0, 0, 0}, size.x, size.y, size.z, BLACK);
                
                // Restore previous transform
                rlPopMatrix();
                
                // Draw goal position
                if(env->entities[i].valid == 1){
                    DrawSphere((Vector3){
                        env->entities[i].goal_position_x,
                        env->entities[i].goal_position_y,
                        env->entities[i].goal_position_z
                    }, 0.5f, DARKGREEN);
                }
                
            }
        }
        
        // Draw road elements
        if(env->entities[i].type > 3 && env->entities[i].type < 7) {
            for(int j = 0; j < env->entities[i].array_size - 1; j++) {
                Vector3 start = {
                    env->entities[i].traj_x[j],
                    env->entities[i].traj_y[j],
                    env->entities[i].traj_z[j]
                };
                Vector3 end = {
                    env->entities[i].traj_x[j + 1],
                    env->entities[i].traj_y[j + 1],
                    env->entities[i].traj_z[j + 1]
                };
                
                Color lineColor = GRAY;
                if (env->entities[i].type == ROAD_LINE) lineColor = BLUE;
                else if (env->entities[i].type == ROAD_EDGE) lineColor = BLACK;
                else if (env->entities[i].type == DRIVEWAY) lineColor = RED;
                
                DrawLine3D(start, end, lineColor);
            }
        }
    }
    
    EndMode3D();
    
    // Draw debug info
    DrawText(TextFormat("Camera Position: (%.2f, %.2f, %.2f)", 
        client->camera.position.x, 
        client->camera.position.y, 
        client->camera.position.z), 10, 10, 20, BLACK);
    DrawText(TextFormat("Camera Target: (%.2f, %.2f, %.2f)", 
        client->camera.target.x, 
        client->camera.target.y, 
        client->camera.target.z), 10, 30, 20, BLACK);
    DrawText(TextFormat("Timestep: %d", env->timestep), 10, 50, 20, BLACK);
    // acceleration & steering
    int human_idx = env->active_agent_indices[env->human_agent_idx];
    DrawText(TextFormat("Controlling Agent: %d", env->human_agent_idx), 10, 70, 20, BLACK);
    DrawText(TextFormat("Agent Index: %d", human_idx), 10, 90, 20, BLACK);
    // Controls help
    DrawText("Controls: W/S - Accelerate/Brake, A/D - Steer, 1-4 - Switch Agent", 
             10, client->height - 30, 20, BLACK);
    EndDrawing();
}
void close_client(Client* client){
    CloseWindow();
    free(client);
}